XUI-469 Bug fix for table overflow (#4172)

--- a/src/sass/7-components/_table.scss
+++ b/src/sass/7-components/_table.scss
@@ -662,6 +662,7 @@ $xui-table-z-alert: 4;
 
 .#{$ns}-table {
 	border-radius: $xui-radius;
+	overflow: hidden;
 	position: relative;
 }
 
